# AzSRE-Agent

./: .dockerignore  .env.example  Dockerfile  Dockerfile.ollama  README.md  docker-compose.yml  pyproject.toml
IaC/: README.md  main.bicep  parameters.example.json
IaC/modules/: application-insights.bicep  container-app.bicep  container-apps-environment.bicep  container-registry.bicep  log-analytics-workspace.bicep
app/: main.py
app/core/: auth.py  database.py  kql_templates.py  ollama_config.py
app/graph/: state.py  workflow.py
app/graph/nodes/: app.py  database.py  infra.py  reporter.py  triage.py  verify.py
app/schemas/: __init__.py  azure_alerts.py  report.py
app/tools/: metrics.py  monitor.py
docs/: ARCHITECTURE.md  INDEX.md  PERMISSIONS.md  README.md  SETUP.md  TROUBLESHOOTING.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: ClientWrapper.tsx  Navbar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/app/history/: page.tsx
frontend/app/incidents/[id]/: page.tsx
scripts/: push_to_acr.ps1  push_to_acr.sh  trigger_alert.py
scripts/chaos/: generate_exception.py  traffic_gen.py
tests/: mock_app_payload.json  mock_payload.json
